--- a/practica/CSS/estilos.css
+++ b/practica/CSS/estilos.css
@@ -1,29 +1,47 @@
-/*Selectores de etiqueta*/
-
-p{
-    color:rgb(10, 10, 105);
-    line-height: 40px;
-    letter-spacing: 10px;
-    word-spacing: 10px;
-    text-align: justify;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Helvetica;
+    color: white;
 }
 
-/*Selector de clase*/
-
-.parrafo-verde{
-    color: rgb(2, 55, 2);
+body{
+    margin: 0;
+    background-color: black;
 }
 
-.parrafo-violeta{
-    color: blueviolet;
-}
-
-.parrafo-rojo{
-    color: red;
-}
-
-.L-roja{
-    font-size: 24px;
-    color: red;
+.hero-image{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(to right,rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.1)), url(../../resources/Fondo_SpyXFamily.jpg);
+    background-size: cover;
+    background-position: center 10%;
     
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: transparent;
+}
+
+.modal-content{
+    position: relative;
+    margin: 5% auto;
+    width: 80%;
+    max-width: 800px;
+    background-color: transparent;
+}
+
+.close:hover{
+    background-color: rgba(255, 255, 255, 0.01);
 }
