--- a/practica/CSS/header.css
+++ b/practica/CSS/header.css
@@ -56,3 +56,26 @@
     font-size: 0.8rem;
     padding-left: 15px;
 }
+
+@media (max-width: 1000px){
+    .header{
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 10px 0;
+    }
+
+    .nav .menu a{
+        font-size: 0.8rem;
+    }
+
+    .bar{
+        width: 80%;
+    }
+
+    .bar input{
+        height: 3.4rem;
+    }
+
+}
